[project]
name = "telemetry-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.29.0",
    "redis>=8.0.0",
    "alembic>=1.18.4",
]

[dependency-groups]
dev = [
    "locust>=2.44.3",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
